--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.googlecode.zohhak</groupId>
 			<artifactId>zohhak</artifactId>
 			<version>1.0.1</version>
@@ -74,7 +74,7 @@
 			<groupId>org.easetech</groupId>
 			<artifactId>easytest-core</artifactId>
 			<version>1.2.5</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
@@ -113,7 +113,7 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
@@ -143,7 +143,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 
 		</plugins>
 	</build>
