--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>demo.grade</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo.grade</name>
+	<packaging>war</packaging>
 
 	<repositories>
 		<repository>
@@ -68,7 +69,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>chachahca</finalName>
+		<finalName>demo</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
