--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>demo</finalName>
+		<finalName>grade</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -57,6 +57,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<path>/grade</path>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
